--- a/.github/actions/admin/action.yml
+++ b/.github/actions/admin/action.yml
@@ -49,8 +49,10 @@ runs:
       if: ${{ github.ref_name != github.event.repository.default_branch }}
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
+      env:
+        DEFAULT_BRANCH: '${{ github.event.repository.default_branch }}'
       run: |-
-        echo "::error ::Guardian Admin can only be run from the default branch (${{ github.event.repository.default_branch }})."
+        echo "::error ::Guardian Admin can only be run from the default branch ($DEFAULT_BRANCH)."
         exit 1
 
     - name: 'Validate Permission'
@@ -59,9 +61,9 @@ runs:
       env:
         GITHUB_TOKEN: '${{ github.token }}'
       run: |-
-        ROLE=$(gh api -H "Accept: application/vnd.github+json" /repos/${{ github.repository }}/collaborators/${{ github.triggering_actor }}/permission | jq .role_name -r)
+        ROLE=$(gh api -H "Accept: application/vnd.github+json" /repos/$GITHUB_REPOSITORY/collaborators/$GITHUB_ACTOR/permission | jq .role_name -r)
         if [ "$ROLE" != "admin" ]; then
-          echo "::error ::Actor @${{ github.triggering_actor }} does not have admin permission to perform these operations."
+          echo "::error ::Actor @$GITHUB_ACTOR does not have admin permission to perform these operations."
           exit 1
         fi
 
@@ -100,4 +102,4 @@ runs:
         TF_IN_AUTOMATION: 'true'
         COMMAND: '${{ inputs.command }}'
       run: |-
-        terraform $COMMAND
+        terraform "$COMMAND"
