--- a/.github/actions/apply/action.yml
+++ b/.github/actions/apply/action.yml
@@ -53,7 +53,7 @@ runs:
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       run: |-
-        echo "Unknown error, see logs for details." > "${{ env.OUT_FILENAME }}"
+        echo "Unknown error, see logs for details." > $OUT_FILENAME
 
     - name: 'Validate Run Number'
       if: ${{ github.run_attempt > 1 }}
@@ -63,7 +63,7 @@ runs:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       run: |-
         MSG="Guardian Apply workflow re-run attempted. Guardian Apply workflows cannot be re-run. To run apply again, create another Pull Request or contact a repo admin."
-        echo "$MSG" > "${{ env.OUT_FILENAME }}"
+        echo "$MSG" > $OUT_FILENAME
         echo "::error ::$MSG"
         exit 1
 
@@ -86,7 +86,7 @@ runs:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       run: |-
         MSG="Configuration error, Guardian Apply can only be run for 'push' events."
-        echo "$MSG" > "${{ env.OUT_FILENAME }}"
+        echo "$MSG" > $OUT_FILENAME
         echo "::error ::$MSG"
         exit 1
 
@@ -101,20 +101,79 @@ runs:
             await github.rest.repos.listPullRequestsAssociatedWithCommit({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              commit_sha: '${{ github.sha }}',
+              commit_sha: process.env.GITHUB_SHA,
             });
 
           const pullRequest = pullRequests.find((pr) => pr.state === "closed");
           if (!pullRequest) {
-            core.setFailed("Failed to get pull request for merged SHA: ${{ github.sha }}");
+            core.setFailed(
+              `Failed to get pull request for merged SHA: ${process.env.GITHUB_SHA}`
+            );
             process.exit(1);
           }
 
           return pullRequest.number;
 
+    - name: 'Determine Plan Diff'
+      id: 'has-diff'
+      uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
+      env:
+        OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
+        GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ steps.get-pr.outputs.result }}/${{ inputs.working_directory }}'
+        BUCKET_NAME: '${{ inputs.bucket_name }}'
+        WORKING_DIRECTORY: '${{ inputs.working_directory }}'
+        MAX_RETRIES: '${{ inputs.max_retries }}'
+        MAX_RETRY_DELAY: '${{ inputs.max_retry_delay }}'
+      with:
+        script: |-
+          const fs = require("fs");
+          const { EOL } = require("os");
+
+          try {
+            const { Storage, IdempotencyStrategy } = require("@google-cloud/storage");
+            const bucketName = process.env.BUCKET_NAME;
+            const fileName = `${process.env.GUARDIAN_PLAN_PREFIX}/tfplan.binary`;
+            const destFileName = `${process.env.WORKING_DIRECTORY}/tfplan.binary`;
+
+            const storage = new Storage({
+              retryOptions: {
+                autoRetry: true,
+                retryDelayMultiplier: 3,
+                totalTimeout: 500,
+                maxRetryDelay: process.env.MAX_RETRY_DELAY,
+                maxRetries: process.env.MAX_RETRIES,
+                idempotencyStrategy: IdempotencyStrategy.RetryAlways,
+              },
+            });
+
+            const [metadata] = await storage
+              .bucket(bucketName)
+              .file(fileName)
+              .getMetadata();
+
+            if(metadata && metadata.metadata && metadata.metadata["plan_exit_code"] === "0"){
+              return false
+            }
+
+            return true
+          } catch (err) {
+            const errString = JSON.stringify(err, undefined, 2);
+            const errorData = `# Determine Plan Diff${EOL}Error: ${errString}`;
+
+            fs.writeFileSync(process.env.OUT_FILEPATH, errorData, { encoding: "utf8" });
+
+            core.error("Failed to determine plan diff");
+            core.error(errString);
+            core.setFailed("Failed to determine plan diff.");
+          }
+
     - name: 'Start Comment'
       id: 'comment'
+      if: ${{ steps.has-diff.outputs.result }}
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
+      env:
+        WORKING_DIRECTORY: '${{ inputs.working_directory }}'
+        PR_NUMBER: '${{ steps.get-pr.outputs.result }}'
       with:
         github-token: '${{ github.token }}'
         retries: '${{ inputs.max_retries }}'
@@ -122,12 +181,14 @@ runs:
           const { data: prComment } = await github.rest.issues.createComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            issue_number: '${{ steps.get-pr.outputs.result }}',
-            body: `**\`🔱 Guardian 🔱\`** - 🟨 **\`APPLY\`** Running for dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]`,
+            issue_number: process.env.PR_NUMBER,
+            body: `**\`🔱 Guardian 🔱\`** - 🟨 **\`APPLY\`** Running for dir: \`${process.env.WORKING_DIRECTORY}\` [[logs](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/attempts/${process.env.GITHUB_RUN_ATTEMPT})]`,
           });
+
           return prComment.id;
 
     - name: 'Setup Terraform'
+      if: ${{ steps.has-diff.outputs.result }}
       uses: 'abcxyz/secure-setup-terraform@78e3f2fdfb7ebf59ce42141f6dd93bdd65bf04ed' # ratchet:abcxyz/secure-setup-terraform@v0.2.5
       with:
         terraform_version: '${{ inputs.terraform_version }}'
@@ -137,20 +198,26 @@ runs:
         terraform_wrapper: false
 
     - name: 'Terraform Init'
+      if: ${{ steps.has-diff.outputs.result }}
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         TF_IN_AUTOMATION: 'true' # tell terraform this is an automated workflow https://developer.hashicorp.com/terraform/tutorials/automation/automate-terraform#controlling-terraform-output-in-automation
       run: |-
-        echo "# Terraform Init" > ${{ env.OUT_FILENAME }}
-        terraform init -input=false -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
+        echo "# Terraform Init" > $OUT_FILENAME
+        terraform init -input=false -no-color 2>&1 | tee -a $OUT_FILENAME
 
     - name: 'Download Plan File'
+      if: ${{ steps.has-diff.outputs.result }}
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
         OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ steps.get-pr.outputs.result }}/${{ inputs.working_directory }}'
+        BUCKET_NAME: '${{ inputs.bucket_name }}'
+        WORKING_DIRECTORY: '${{ inputs.working_directory }}'
+        MAX_RETRIES: '${{ inputs.max_retries }}'
+        MAX_RETRY_DELAY: '${{ inputs.max_retry_delay }}'
       with:
         script: |-
           const fs = require("fs");
@@ -158,22 +225,21 @@ runs:
 
           try {
             const { Storage, IdempotencyStrategy } = require("@google-cloud/storage");
-            const bucketName = "${{ inputs.bucket_name }}";
-            const fileName = "${{ env.GUARDIAN_PLAN_PREFIX }}/tfplan.binary";
-            const destFileName = "${{ inputs.working_directory }}/tfplan.binary";
+            const bucketName = process.env.BUCKET_NAME;
+            const fileName = `${process.env.GUARDIAN_PLAN_PREFIX}/tfplan.binary`;
+            const destFileName = `${process.env.WORKING_DIRECTORY}/tfplan.binary`;
 
             const storage = new Storage({
               retryOptions: {
                 autoRetry: true,
                 retryDelayMultiplier: 3,
                 totalTimeout: 500,
-                maxRetryDelay: "${{ inputs.max_retry_delay }}",
-                maxRetries: "${{ inputs.max_retries }}",
+                maxRetryDelay: process.env.MAX_RETRY_DELAY,
+                maxRetries: process.env.MAX_RETRIES,
                 idempotencyStrategy: IdempotencyStrategy.RetryAlways,
               },
             });
 
-            // TODO(verbanicm): does this delete all versions?
             await storage
               .bucket(bucketName)
               .file(fileName)
@@ -182,7 +248,7 @@ runs:
             const errString = JSON.stringify(err, undefined, 2);
             const errorData = `# Download Plan File${EOL}Error: ${errString}`;
 
-            fs.writeFileSync("${{ env.OUT_FILEPATH }}", errorData, { encoding: "utf8" });
+            fs.writeFileSync(process.env.OUT_FILEPATH, errorData, { encoding: "utf8" });
 
             core.error("Failed to download plan file");
             core.error(errString);
@@ -190,36 +256,40 @@ runs:
           }
 
     - name: 'Terraform Apply'
+      if: ${{ steps.has-diff.outputs.result }}
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         TF_IN_AUTOMATION: 'true' # tell terraform this is an automated workflow https://developer.hashicorp.com/terraform/tutorials/automation/automate-terraform#controlling-terraform-output-in-automation
+        LOCK_TIMEOUT: '${{ inputs.lock_timeout }}'
       run: |-
-        echo "# Terraform Apply" > ${{ env.OUT_FILENAME }}
-        terraform apply -lock-timeout=${{ inputs.lock_timeout }} -input=false -no-color tfplan.binary 2>&1 | tee -a ${{ env.OUT_FILENAME }}
+        echo "# Terraform Apply" > $OUT_FILENAME
+        terraform apply -lock-timeout=$LOCK_TIMEOUT -input=false -no-color tfplan.binary 2>&1 | tee -a $OUT_FILENAME
 
     - name: 'GitHub Format'
+      if: ${{ steps.has-diff.outputs.result }}
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       run: |-
-        sed -i -E 's|^([[:space:]]*)([~])|\1\!|g' ${{ env.OUT_FILENAME }}
-        sed -i -E 's|^([[:space:]]*)([-+\!])|\2\1|g' ${{ env.OUT_FILENAME }}
+        sed -i -E 's|^([[:space:]]*)([~])|\1\!|g' $OUT_FILENAME
+        sed -i -E 's|^([[:space:]]*)([-+\!])|\2\1|g' $OUT_FILENAME
 
     - name: 'Create Success File'
+      if: ${{ steps.has-diff.outputs.result }}
       shell: 'bash'
       working-directory: '${{ inputs.working_directory }}'
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         SUCCESS_FILENAME: 'success_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       run: |-
-        cp ${{ env.OUT_FILENAME }} ${{ env.SUCCESS_FILENAME }}
+        cp $OUT_FILENAME $SUCCESS_FILENAME
 
         # Since the delete plan action always runs, we should clear the outfile.
         # If the delete plan action fails, it can append to empty file and not to successful output.
-        rm ${{ env.OUT_FILENAME }}
+        rm $OUT_FILENAME
 
     - name: 'Delete Plan File'
       if: ${{ steps.get-pr.outcome == 'success' && always() }}
@@ -227,6 +297,9 @@ runs:
       env:
         OUT_FILEPATH: '${{ inputs.working_directory }}/out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
         GUARDIAN_PLAN_PREFIX: 'guardian-plans/${{ github.repository }}/${{ steps.get-pr.outputs.result }}/${{ inputs.working_directory }}'
+        BUCKET_NAME: '${{ inputs.bucket_name }}'
+        MAX_RETRIES: '${{ inputs.max_retries }}'
+        MAX_RETRY_DELAY: '${{ inputs.max_retry_delay }}'
       with:
         script: |-
           const fs = require("fs");
@@ -234,16 +307,16 @@ runs:
 
           try {
             const { Storage, IdempotencyStrategy } = require("@google-cloud/storage");
-            const bucketName = "${{ inputs.bucket_name }}";
-            const fileName = "${{ env.GUARDIAN_PLAN_PREFIX }}/tfplan.binary";
+            const bucketName = process.env.BUCKET_NAME;
+            const fileName = `${process.env.GUARDIAN_PLAN_PREFIX}/tfplan.binary`;
 
             const storage = new Storage({
               retryOptions: {
                 autoRetry: true,
                 retryDelayMultiplier: 3,
                 totalTimeout: 500,
-                maxRetryDelay: "${{ inputs.max_retry_delay }}",
-                maxRetries: "${{ inputs.max_retries }}",
+                maxRetryDelay: process.env.MAX_RETRY_DELAY,
+                maxRetries: process.env.MAX_RETRIES,
                 idempotencyStrategy: IdempotencyStrategy.RetryAlways,
               },
             });
@@ -257,7 +330,7 @@ runs:
             const errorData = `${EOL}${EOL}# Delete Plan File${EOL}Error: ${errString}`;
 
             // Append here since this always runs, regardless of previous failures
-            fs.appendFileSync("${{ env.OUT_FILEPATH }}", errorData, { encoding: "utf8" });
+            fs.appendFileSync(process.env.OUT_FILEPATH, errorData, { encoding: "utf8" });
 
             core.error("Failed to delete plan file");
             core.error(errString);
@@ -272,25 +345,30 @@ runs:
       env:
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
       run: |-
-        touch ${{ env.OUT_FILENAME }}
+        touch $OUT_FILENAME
 
     - name: 'Failure Comment'
       if: ${{ steps.get-pr.outcome == 'success' && failure() }}
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
+        COMMENT_ID: '${{ steps.comment.outputs.result }}'
         OUT_FILENAME: 'out_${{ github.run_id }}_${{ github.run_attempt }}.txt'
+        WORKING_DIRECTORY: '${{ inputs.working_directory }}'
       with:
         github-token: '${{ github.token }}'
         retries: '${{ inputs.max_retries }}'
         script: |-
-          const fs = require('fs')
-          const msg = fs.readFileSync('${{ inputs.working_directory }}/${{ env.OUT_FILENAME }}', { encoding: 'utf8' });
+          const fs = require("fs");
+          const msg = fs.readFileSync(
+            `${process.env.WORKING_DIRECTORY}/${process.env.OUT_FILENAME}`,
+            { encoding: "utf8" }
+          );
 
           await github.rest.issues.updateComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            comment_id: '${{ steps.comment.outputs.result }}',
-            body: `**\`🔱 Guardian 🔱\`** - 🟥 **\`APPLY\`** Failed for dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
+            comment_id: process.env.COMMENT_ID,
+            body: `**\`🔱 Guardian 🔱\`** - 🟥 **\`APPLY\`** Failed for dir: \`${process.env.WORKING_DIRECTORY}\` [[logs](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/attempts/${process.env.GITHUB_RUN_ATTEMPT})]\n
           <details>
           <summary>Details</summary>\n
           \`\`\`diff\n
@@ -300,22 +378,28 @@ runs:
           });
 
     - name: 'Success Comment'
-      if: ${{ steps.get-pr.outcome == 'success' && success() }}
+      if: ${{ steps.get-pr.outcome == 'success' && steps.has-diff.outputs.result && success() }}
       uses: 'actions/github-script@98814c53be79b1d30f795b907e553d8679345975' # ratchet:actions/github-script@v6
       env:
+        COMMENT_ID: '${{ steps.comment.outputs.result }}'
         SUCCESS_FILENAME: 'success_${{ github.run_id }}_${{ github.run_attempt }}.txt'
+        WORKING_DIRECTORY: '${{ inputs.working_directory }}'
       with:
         github-token: '${{ github.token }}'
         retries: '${{ inputs.max_retries }}'
         script: |-
-          const fs = require('fs')
-          const msg = fs.readFileSync('${{ inputs.working_directory }}/${{ env.SUCCESS_FILENAME }}', { encoding: 'utf8' })
+          const fs = require("fs");
+          const msg = fs.readFileSync(
+            `${process.env.WORKING_DIRECTORY}/${process.env.SUCCESS_FILENAME}`,
+            { encoding: "utf8" }
+          );
 
           await github.rest.issues.updateComment({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            comment_id: '${{ steps.comment.outputs.result }}',
-            body: `**\`🔱 Guardian 🔱\`** - 🟩 **\`APPLY\`** Successful for dir: \`${{inputs.working_directory}}\` [[logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})]\n
+            comment_id: process.env.COMMENT_ID,
+            body: `**\`🔱 Guardian 🔱\`** - 🟩 **\`APPLY\`** Successful for dir: \`${process.env.WORKING_DIRECTORY}\` [[logs](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID}/attempts/${process.env.GITHUB_RUN_ATTEMPT})]
+
           <details>
           <summary>Details</summary>\n
           \`\`\`diff\n
